force-app/main/default/objects/SLA_Tracking__c/SLA_Tracking__c.object-meta.xml
<CustomObject>
    <label>SLA Tracking</label>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>SLA Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>