force-app/main/default/objects/SLA_Tracking__c/fields/Breach_Time__c.field-meta.xml
<CustomField>
    <fullName>Breach_Time__c</fullName>
    <label>Breach Time</label>
    <type>DateTime</type>
</CustomField>