force-app/main/default/objects/SLA_Tracking__c/fields/First_Response_Target__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Target__c</fullName>
    <label>First Response Target</label>
    <type>DateTime</type>
</CustomField>