force-app/main/default/objects/SLA_Tracking__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours__c</fullName>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>