force-app/main/default/objects/SLA_Tracking__c/fields/Resolution_Target__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Target__c</fullName>
    <label>Resolution Target</label>
    <type>DateTime</type>
</CustomField>