force-app/main/default/objects/SLA_Tracking__c/fields/SLA_End__c.field-meta.xml
<CustomField>
    <fullName>SLA_End__c</fullName>
    <label>SLA End</label>
    <type>Date</type>
</CustomField>